# ncorr_2D_matlab

ncorr_python/: .gitignore  README.md  analyze_banding.py  analyze_cracks.py  analyze_local_displacement.py  diagnose_stripes.py  pyproject.toml  test_tensile.py  visualize_dic.py
ncorr_python/docs/: 01_einfuehrung.md  02_installation.md  03_schnellstart.md  04_grundkonzepte.md  05_tutorials.md  06_api_referenz.md  07_beispiele.md  08_troubleshooting.md  algorithm_description.tex  index.md
ncorr_python/examples/: dic_analysis_example.py  test_tensile.py
ncorr_python/ncorr/: __init__.py  main.py
ncorr_python/ncorr/algorithms/: __init__.py  bspline.py  dic.py  regions.py  seeds.py  strain.py
ncorr_python/ncorr/core/: __init__.py  dic_parameters.py  image.py  roi.py  status.py
ncorr_python/ncorr/utils/: __init__.py  colormaps.py  image_loader.py  validation.py
ncorr_python/scripts/: batch_crack_analysis.py  export_statistics.py  inspect_result.py  plot_crack_results.py
ncorr_python/tests/: __init__.py  conftest.py  test_algorithms.py  test_core.py  test_main.py  test_utils.py
